fix: increase navbar brand image width for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ a:focus {
 }
 
 .navbar-brand img {
-  width: 45px;
+  width: 60px;
 }
 
 .navbar-brand,
